objects/OpportunityEmailAlerts__c.object
<CustomObject>
    <fields>
        <fullName>Sent_to__c</fullName>
        <label>Sent to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>TemplateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>OpportunityEmailAlerts</label>
</CustomObject>